<resources>
    <string name="app_name">My Journey</string>

    <string name="hello_world">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_spot">SPOTIFY STREAMER</string>
    <string name="btn_scores">SCORES APP</string>
    <string name="btn_library">LIBRARY APP</string>
    <string name="btn_bib">BUILD IT BIGGER</string>
    <string name="btn_xyz">XYZ READER</string>
    <string name="btn_capstone">CAPSTONE: MY OWN APP</string>
</resources>
